<resources>
    <string name="app_name">All Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="new_grocery_item">New Item</string>

    <string name="menu_grocery_list">Grocery List</string>
    <string name="menu_storage">Storage</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_meal_planner">Meal Planner</string>
    <string name="menu_bills">Bills</string>
    <string name="menu_expenses_summary">Expenses Summary</string>
    <string name="menu_todo">To Do</string>
    <string name="title_activity_grocery_list_activity">Grocery List</string>
    <!-- Strings used for fragments for navigation -->

    <string name="title_activity_create_grocery_list">CreateGroceryListActivity</string>
    <string name="title_activity_single_grocery_list">Lauro birthday long list this is the long list</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="grocery_notification_none">None</string>
    <string name="grocery_notification_same_day_and_time">Same day and time</string>
    <string name="grocery_notification_minute_before">Minute before</string>
    <string name="grocery_notification_hour_before">Hour before</string>
    <string name="grocery_notification_day_before">Day before</string>
    <!-- Days -->
    <string name="monday">Monday</string>
    <string name="monday_abbr">Mon</string>
    <string name="tuesday">Tuesday</string>
    <string name="tuesday_abbr">Tue</string>
    <string name="wednesday">Wednesday</string>
    <string name="wednesday_abbr">Wed</string>
    <string name="thursday">Thursday</string>
    <string name="thursday_abbr">Thu</string>
    <string name="friday">Friday</string>
    <string name="friday_abbr">Fri</string>
    <string name="saturday">Saturday</string>
    <string name="saturday_abbr">Sat</string>
    <string name="sunday">Sunday</string>
    <string name="sunday_abbr">Sun</string>

    <string-array name="grocery_alarm_options">
        <item>@string/grocery_notification_none</item>
        <item>@string/grocery_notification_same_day_and_time</item>
        <item>@string/grocery_notification_minute_before</item>
        <item>@string/grocery_notification_hour_before</item>
        <item>@string/grocery_notification_day_before</item>
    </string-array>


    <string-array name="todo_alarm_options">
        <item>@string/grocery_notification_none</item>
        <item>@string/grocery_notification_same_day_and_time</item>
        <item>@string/grocery_notification_minute_before</item>
        <item>@string/grocery_notification_hour_before</item>
        <item>@string/grocery_notification_day_before</item>
    </string-array>

    <!--MEAL TYPE-->
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Launch</string>
    <string name="dinner">Dinner</string>
    <string name="snack_after_breakfast">Snack after breakfast</string>
    <string name="snack_after_lunch">Snack after launch</string>
    <string name="snack_after_dinner">Snack after dinner</string>

    <string-array name="meal_type">
        <item>@string/breakfast</item>
        <item>@string/lunch</item>
        <item>@string/dinner</item>
        <item>@string/snack_after_breakfast</item>
        <item>@string/snack_after_lunch</item>
        <item>@string/snack_after_dinner</item>
    </string-array>

    <string name="one">Day 1</string>
    <string name="two">Day 2</string>
    <string name="three">Day 3</string>
    <string name="four">Day 4</string>
    <string name="five">Day 5</string>
    <string name="six">Day 6</string>
    <string name="seven">Day 7</string>
    <string name="eight">Day 8</string>
    <string name="nine">Day 9</string>
    <string name="ten">Day 10</string>
    <string name="eleven">Day 11</string>
    <string name="twelve">Day 12</string>
    <string name="thirteen">Day 13</string>
    <string name="fourteen">Day 14</string>
    <string name="fifteen">Day 15</string>
    <string name="sixteen">Day 16</string>
    <string name="seventeen">Day 17</string>
    <string name="eighteen">Day 18</string>
    <string name="nineteen">Day 19</string>
    <string name="twenty">Day 20</string>
    <string name="twenty_one">Day 21</string>
    <string name="twenty_two">Day 22</string>
    <string name="twenty_three">Day 23</string>
    <string name="twenty_four">Day 24</string>
    <string name="twenty_five">Day 25</string>
    <string name="twenty_six">Day 26</string>
    <string name="twenty_seven">Day 27</string>
    <string name="twenty_eight">Day 28</string>
    <string name="twenty_nine">Day 29</string>
    <string name="thirty">Day 30</string>
    <string name="thirty_one">Day 31</string>

    <string name="cost_is_equal">Cost is equal</string>
    <string name="cost_is_less_than">Cost is less than</string>
    <string name="cost_is_greater_than">Cost is greater than</string>
    <string-array name="cost_filter">
        <item>@string/cost_is_less_than</item>
        <item>@string/cost_is_equal</item>
        <item>@string/cost_is_greater_than</item>

    </string-array>

    <string name="serving_is_equal">Serving is equal</string>
    <string name="serving_is_less_than">Serving is less than</string>
    <string name="serving_is_greater_than">Serving is greater than</string>
    <string-array name="serving_filter">
        <item>@string/serving_is_equal</item>
        <item>@string/serving_is_greater_than</item>
        <item>@string/serving_is_less_than</item>
    </string-array>
    <string-array name="months_number">
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
        <item>@string/five</item>
        <item>@string/six</item>
        <item>@string/seven</item>
        <item>@string/eight</item>
        <item>@string/nine</item>
        <item>@string/ten</item>
        <item>@string/eleven</item>
        <item>@string/twelve</item>
        <item>@string/thirteen</item>
        <item>@string/fourteen</item>
        <item>@string/fifteen</item>
        <item>@string/sixteen</item>
        <item>@string/seventeen</item>
        <item>@string/eighteen</item>
        <item>@string/nineteen</item>
        <item>@string/twenty</item>
        <item>@string/twenty_one</item>
        <item>@string/twenty_two</item>
        <item>@string/twenty_three</item>
        <item>@string/twenty_four</item>
        <item>@string/twenty_five</item>
        <item>@string/twenty_six</item>
        <item>@string/twenty_seven</item>
        <item>@string/twenty_eight</item>
        <item>@string/twenty_nine</item>
        <item>@string/thirty</item>
        <item>@string/thirty_one</item>
        <item>@string/end_of_month</item>
    </string-array>
    <string name="prep_plus_cook_time_is_equal">Prep + cook time is equal</string>
    <string name="prep_plus_cook_time_is_less_than">Prep + cook time is less than</string>
    <string name="prep_plus_cook_time_is_greater_than">Prep + cook time is greater than</string>

    <string-array name="total_time_filter">
        <item>@string/prep_plus_cook_time_is_less_than</item>
        <item>@string/prep_plus_cook_time_is_equal</item>
        <item>@string/prep_plus_cook_time_is_greater_than</item>

    </string-array>

    <string name="year">Year</string>
    <string name="date_of_month">Date of month</string>
    <string name="end_of_month">End of month</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="none">None</string>

    <string-array name="bill_recurring">
        <item>@string/day</item>
        <item>@string/week</item>
        <item>@string/month</item>
        <item>@string/end_of_month</item>
        <item>@string/date_of_month</item>
        <item>@string/year</item>
    </string-array>
    <string-array name="todo_recurring">
        <item>@string/none</item>
        <item>@string/day</item>
        <item>@string/week</item>
        <item>@string/month</item>
        <item>@string/end_of_month</item>
        <item>@string/date_of_month</item>
        <item>@string/year</item>
    </string-array>

    <string-array name="tod_repeat_month_options">
        <item>@string/none</item>
        <item>@string/day</item>
        <item>@string/week</item>
        <item>@string/month</item>
        <item>@string/end_of_month</item>
        <item>@string/date_of_month</item>
        <item>@string/year</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- PANTRY-->
    <string name="no_stock">No stock</string>
    <string name="low_stock">Low</string>
    <string name="high_stock">High</string>
    <string name="expired_stock">Expired</string>
    <!-- TO DO LIST -->
    <string name="yesterday_todo">Yesterday</string>
    <string name="today_todo">Today</string>
    <string name="tomorrow_todo">Tomorrow</string>
</resources>