<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_grocery_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_grocery_list" />
        <item
            android:id="@+id/nav_storage"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_storage" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_meal_planner"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_meal_planner" />
        <item
            android:id="@+id/nav_bills"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_bills" />
        <item
            android:id="@+id/nav_expenses_summary"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_expenses_summary" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_todo" />
    </group>
</menu>