<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="pantryAddItemViewModel"
            type="com.example.allhome.pantry.viewmodel.PantryAddItemViewModel" />

    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantry.PantryAddItemActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/pantryItemTextinputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pantryItemTextinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Pantry item" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/pantryItemTextinputLayout">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pantryItemQuantityTextinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:hint="Quantity"
                android:inputType="numberDecimal"
                android:nextFocusDown="@id/unit_textinput"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <AutoCompleteTextView
                android:id="@+id/pantryItemUnitTextinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownHeight="wrap_content"
                android:hint="Unit"
                android:paddingLeft="10dp"
                android:paddingTop="14dp"
                android:paddingRight="10dp"
                android:paddingBottom="14dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="Stock Weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <RadioGroup
        android:id="@+id/pantryItemStockWeightRadiogroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <RadioButton
            android:id="@+id/pantryNoStockRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_stock" />

        <RadioButton
            android:id="@+id/pantryLowStockRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/low_stock" />

        <RadioButton
            android:id="@+id/pantryHightStockRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/high_stock" />
    </RadioGroup>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Expiration Date"
            app:layout_constraintEnd_toStartOf="@+id/pantryAddExpirationBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pantryItemStockWeightRadiogroup" />

        <ImageButton
            android:id="@+id/pantryAddExpirationBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pantryItemStockWeightRadiogroup"
            app:srcCompat="@drawable/ic_add" />

        <androidx.recyclerview.widget.RecyclerView
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:id="@+id/pantryItemExpirationRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            tools:layout_editor_absoluteX="10dp"
            tools:listitem="@layout/pantry_expiration_layout"
            tools:itemCount="3"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pantryItemExpirationRecyclerview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pantryItemNotesTextinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Notes"
            android:inputType="textMultiLine"
            android:minLines="2" />
    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pantryItemAddImageBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

        <ImageButton
            android:id="@+id/pantryItemAddImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/textView17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            app:srcCompat="@drawable/ic_add_a_photo" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>